RESOLVED FIXED241787
Fix spelling error identifer -> identifier.
https://bugs.webkit.org/show_bug.cgi?id=241787
Summary Fix spelling error identifer -> identifier.
Youssef Soliman
Reported 2022-06-20 10:55:31 PDT
Across multiple files, the word "identifier" is misspelled as "identifer"
Attachments
Youssef Soliman
Comment 1 2022-06-20 10:57:42 PDT
Radar WebKit Bug Importer
Comment 2 2022-06-20 15:29:39 PDT
EWS
Comment 3 2022-06-21 15:40:18 PDT
Committed r295696 (251701@main): <https://commits.webkit.org/251701@main> Reviewed commits have been landed. Closing PR #1640 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.