Fix spelling error identifer -> identifier. https://bugs.webkit.org/show_bug.cgi?id=241787

Patch by Youssef Soliman <youssefdevelops@gmail.com> on 2022-06-21
Reviewed by Jonathan Bedard and Ross Kirsling.

Across multiple files, the word "identifier" is misspelled as "identifer"

* Source/WebCore/Modules/filesystemaccess/FileSystemHandleCloseScope.h:
(WebCore::FileSystemHandleCloseScope::FileSystemHandleCloseScope):
* Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:
(GenerateDeletePropertyCommon):
* Source/WebCore/bindings/scripts/test/JS/JSTestNamedDeleterNoIdentifier.cpp:
(WebCore::JSTestNamedDeleterNoIdentifier::deleteProperty):
(WebCore::JSTestNamedDeleterNoIdentifier::deletePropertyByIndex):
* Source/WebCore/bindings/scripts/test/JS/JSTestNamedDeleterThrowingException.cpp:
(WebCore::JSTestNamedDeleterThrowingException::deleteProperty):
(WebCore::JSTestNamedDeleterThrowingException::deletePropertyByIndex):
* Source/WebCore/bindings/scripts/test/JS/JSTestNamedDeleterWithIndexedGetter.cpp:
(WebCore::JSTestNamedDeleterWithIndexedGetter::deleteProperty):
* Source/WebKit/GPUProcess/graphics/RemoteRenderingBackend.cpp:
(WebKit::RemoteRenderingBackend::prepareLayerBuffersForDisplay):
* Source/WebKit/Shared/ObjectIdentifierReferenceTracker.h:
* Source/WebKit/UIProcess/API/APIContentWorld.cpp:
(API::ContentWorld::worldForIdentifier):
* Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
(WebKit::RemoteRenderingBackendProxy::ensureGPUProcessConnection):
* Source/WebKit/WebProcess/Storage/WebSWContextManagerConnection.messages.in:
* Source/WebKit/webpushd/PushClientConnection.mm:
(WebPushD::ClientConnection::broadcastDebugMessage):
* Tools/MiniBrowser/mac/WK2BrowserWindowController.m:
(-[WK2BrowserWindowController updateTitle:]):
* Tools/Scripts/libraries/webkitscmpy/webkitscmpy/program/__init__.py:
* Tools/Scripts/libraries/webkitscmpy/webkitscmpy/program/revert.py:
(Revert.parser):
* Tools/Scripts/libraries/webkitscmpy/webkitscmpy/program/squash.py:
(Squash.parser):

Canonical link: https://commits.webkit.org/251701@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295696 268f45cc-cd09-0410-ab3c-d52691b4dbfc